k8s/istio/peer-authentication.yaml
---
# PeerAuthentication: Enable mTLS for all services in production
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: etelios-backend-prod
spec:
  mtls:
    mode: STRICT  # Require mTLS for all service-to-service communication

---
# PeerAuthentication: Enable mTLS for all services in dev
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: etelios-backend-dev
spec:
  mtls:
    mode: STRICT  # Require mTLS for all service-to-service communication
